# telangana-realestate-checker

./: .gitignore  README.md
.agents/skills/testing-search/: SKILL.md
.agents/skills/testing-tg-realestate/: SKILL.md
backend/: Dockerfile  Procfile  main.py  pyproject.toml  render.yaml  requirements.txt
backend/app/: main.py
backend/app/models/: schemas.py
backend/app/scrapers/: bpass.py  dharani.py  hmda.py  rera.py
backend/server/: main.py
backend/server/scrapers/: bpass.py  dharani.py  hmda.py  rera.py
backend/static/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._index.txt  __next._tree.txt  index.html  index.txt
backend/static/404/: index.html
backend/static/_next/static/chunks/: 00fxm2n6kq29a.js  1-nplqehlkmdb.js  1ng_5zw_d-i0h.js  24o5o31nbsiwa.js  2ujdfwegu5nso.js  2zjnyp60tqg31.js  32jd-qxym1pq_.js  3g28fdg2mao6b.js  3p5az15wg9wm8.css  3wl_40irjjvpc.css  3xupksor-y5l1.js  turbopack-3fsr4ufpx3su0.js
backend/static/_not-found/: __next._full.txt  __next._head.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt  index.txt
backend/static/bpass/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.bpass.__PAGE__.txt  index.html
backend/static/dharani/: __next._index.txt  __next._tree.txt  __next.dharani.__PAGE__.txt  __next.dharani.txt  index.html  index.txt
backend/static/rera/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.rera.__PAGE__.txt  index.html
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: PortalStatus.tsx  (+3 more)
(+4 files in other folders)
